; ModuleID = '/home/carl/AnghaBench/reactos/drivers/filesystems/btrfs/zstd/extr_zstd_decompress.c_ZSTD_decodingBufferSize_min.c'
source_filename = "/home/carl/AnghaBench/reactos/drivers/filesystems/btrfs/zstd/extr_zstd_decompress.c_ZSTD_decodingBufferSize_min.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ZSTD_BLOCKSIZE_MAX = common dso_local global i64 0, align 8
@WILDCOPY_OVERLENGTH = common dso_local global i32 0, align 4
@frameParameter_windowTooLarge = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @ZSTD_decodingBufferSize_min(i64 %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  store i64 %0, i64* %4, align 8
  store i64 %1, i64* %5, align 8
  %10 = load i64, i64* %4, align 8
  %11 = load i64, i64* @ZSTD_BLOCKSIZE_MAX, align 8
  %12 = call i64 @MIN(i64 %10, i64 %11)
  store i64 %12, i64* %6, align 8
  %13 = load i64, i64* %4, align 8
  %14 = load i64, i64* %6, align 8
  %15 = add i64 %13, %14
  %16 = load i32, i32* @WILDCOPY_OVERLENGTH, align 4
  %17 = mul nsw i32 %16, 2
  %18 = sext i32 %17 to i64
  %19 = add i64 %15, %18
  store i64 %19, i64* %7, align 8
  %20 = load i64, i64* %5, align 8
  %21 = load i64, i64* %7, align 8
  %22 = call i64 @MIN(i64 %20, i64 %21)
  store i64 %22, i64* %8, align 8
  %23 = load i64, i64* %8, align 8
  store i64 %23, i64* %9, align 8
  %24 = load i64, i64* %9, align 8
  %25 = load i64, i64* %8, align 8
  %26 = icmp ne i64 %24, %25
  br i1 %26, label %27, label %30

27:                                               ; preds = %2
  %28 = load i32, i32* @frameParameter_windowTooLarge, align 4
  %29 = call i64 @ERROR(i32 %28)
  store i64 %29, i64* %3, align 8
  br label %32

30:                                               ; preds = %2
  %31 = load i64, i64* %9, align 8
  store i64 %31, i64* %3, align 8
  br label %32

32:                                               ; preds = %30, %27
  %33 = load i64, i64* %3, align 8
  ret i64 %33
}

declare dso_local i64 @MIN(i64, i64) #1

declare dso_local i64 @ERROR(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
